## Process this file with automake to produce Makefile.in

## The MMM Mode distribution is `flat', so we have no SUBDIRS macro.

lisp_LISP = mmm-compat.el mmm-vars.el mmm-utils.el mmm-auto.el \
  mmm-region.el mmm-class.el mmm-cmds.el mmm-mode.el \
  mmm-sample.el mmm-mason.el

info_TEXINFOS = mmm.texinfo
