## Process this file with automake to produce Makefile.in

## The MMM Mode distribution is `flat', so we have no SUBDIRS macro.

# Distribute the lisp files with the dist_ prefix.
# See the automake manual.
dist_lisp_LISP = mmm-compat.el mmm-vars.el mmm-utils.el mmm-auto.el \
  mmm-region.el mmm-class.el mmm-cmds.el mmm-mode.el \
  mmm-sample.el mmm-mason.el mmm-univ.el mmm-rpm.el mmm-cweb.el \
  mmm-noweb.el mmm-myghty.el mmm-erb.el mmm-defaults.el

info_TEXINFOS = mmm.texi

EXTRA_DIST = README.Mason FAQ
