dnl Process this file with autoconf to produce a configure script.
AC_INIT([mmm-mode], [0.5.8])
AC_CONFIG_SRCDIR([mmm-mode.el])
AM_INIT_AUTOMAKE([info-in-builddir])

AM_PATH_LISPDIR

AS_IF([test "$EMACS" = no],[AC_MSG_ERROR([no Emacs program found])])

AC_EMACS_VERSION

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
